#28724 updating font variables to match figma design
-update $font-size-default to 0.875
-match font-size vars to match figma design
-add $font-size-xxxxl to manage edge cases with 3rem font-size (not in figma)
-replace all the $font-size-smd with the sm one to maintain consistency
-replace all the $font-size-xsm with the xs one to maintain consistency

--- a/core-web/libs/dotcms-scss/angular/dotcms-theme/components/_datatable.scss
+++ b/core-web/libs/dotcms-scss/angular/dotcms-theme/components/_datatable.scss
@@ -203,7 +203,7 @@
 }
 
 .p-datatable .p-datatable-loading-icon {
-    font-size: $font-size-xxxl;
+    font-size: $font-size-xxxxl;
     color: $color-palette-secondary;
 }
 
