--- a/core-web/libs/dotcms-scss/angular/dotcms-theme/components/_tag.scss
+++ b/core-web/libs/dotcms-scss/angular/dotcms-theme/components/_tag.scss
@@ -14,7 +14,7 @@
 
 p-tag.sm {
     .p-tag {
-        font-size: $font-size-xsm;
+        font-size: $font-size-xs;
         padding: $spacing-0 $spacing-1;
 
         .p-tag-value {
