--- a/core-web/libs/edit-content/src/lib/components/dot-edit-content-aside/dot-edit-content-aside.component.scss
+++ b/core-web/libs/edit-content/src/lib/components/dot-edit-content-aside/dot-edit-content-aside.component.scss
@@ -40,7 +40,7 @@
 
             span {
                 color: $color-palette-primary-500;
-                font-size: $font-size-xsm;
+                font-size: $font-size-xs;
                 font-weight: $font-weight-regular-bold;
                 line-height: $line-height-relative;
                 text-transform: capitalize;
