--- a/core-web/libs/portlets/dot-locales/portlet/src/lib/dot-locales-list/components/dot-locale-create-edit/DotLocaleCreateEdit.component.scss
+++ b/core-web/libs/portlets/dot-locales/portlet/src/lib/dot-locales-list/components/dot-locale-create-edit/DotLocaleCreateEdit.component.scss
@@ -26,6 +26,6 @@
 
 .locale-add__error-message {
     margin: $spacing-1 0;
-    font-size: $font-size-smd;
+    font-size: $font-size-sm;
     color: $red;
 }
