--- a/core-web/libs/ui/src/lib/components/dot-empty-container/dot-empty-container.component.scss
+++ b/core-web/libs/ui/src/lib/components/dot-empty-container/dot-empty-container.component.scss
@@ -25,7 +25,7 @@
 }
 
 .message__icon {
-    font-size: $font-size-xxxl;
+    font-size: $font-size-xxxxl;
     padding: $spacing-2;
     color: $color-palette-gray-700;
 }
