#28724 replacing 2rem with $font-size-xxxl var

--- a/core-web/libs/dotcms-scss/angular/dotcms-theme/components/_dataview.scss
+++ b/core-web/libs/dotcms-scss/angular/dotcms-theme/components/_dataview.scss
@@ -43,7 +43,7 @@
 }
 
 .p-dataview .p-dataview-loading-icon {
-    font-size: 2rem;
+    font-size: $font-size-xxxl;
 }
 
 .p-dataview .p-dataview-emptymessage {
