#28724 replace font-size values expressed in rems with vars

--- a/core-web/libs/dotcms-scss/angular/dotcms-theme/components/_confirmpopup.scss
+++ b/core-web/libs/dotcms-scss/angular/dotcms-theme/components/_confirmpopup.scss
@@ -79,7 +79,7 @@
 }
 
 .p-confirm-popup .p-button.p-button-sm {
-    font-size: 0.875rem;
+    font-size: $font-size-sm;
     padding: 0.65625rem 1.09375rem;
 }
 
