--- a/core-web/libs/dotcms-webcomponents/src/components/contenttypes-fields/dot-binary-file/components/dot-binary-file-preview/dot-binary-file-preview.scss
+++ b/core-web/libs/dotcms-webcomponents/src/components/contenttypes-fields/dot-binary-file/components/dot-binary-file-preview/dot-binary-file-preview.scss
@@ -37,7 +37,7 @@ dot-binary-file-preview {
             overflow: hidden;
             padding: 0.5rem;
             text-overflow: ellipsis;
-            font-size: $font-size-xxxl;
+            font-size: 2rem;
         }
     }
 }
