--- a/core-web/libs/dotcms-scss/angular/dotcms-theme/components/_dialog.scss
+++ b/core-web/libs/dotcms-scss/angular/dotcms-theme/components/_dialog.scss
@@ -20,8 +20,7 @@
 }
 
 .p-dialog .p-dialog-header .p-dialog-title {
-    font-size: $font-size-xl;
-    font-size: 1.5rem;
+    font-size: $font-size-lg;
 }
 
 .p-dialog .p-dialog-header .p-dialog-header-icon {
