--- a/core-web/libs/edit-content/src/lib/fields/dot-edit-content-binary-field/components/dot-binary-field-ui-message/dot-binary-field-ui-message.component.scss
+++ b/core-web/libs/edit-content/src/lib/fields/dot-edit-content-binary-field/components/dot-binary-field-ui-message/dot-binary-field-ui-message.component.scss
@@ -14,6 +14,11 @@
     border-radius: 50%;
     padding: $spacing-3;
 
+    .icon {
+        font-size: $font-size-xxl;
+        width: auto;
+    }
+
     &.info {
         color: $color-palette-secondary-500;
         background: $color-palette-secondary-200;
