chore(editor-content):  fix error loadind modals

--- a/core-web/libs/block-editor/src/lib/components/dot-block-editor/dot-block-editor.component.html
+++ b/core-web/libs/block-editor/src/lib/components/dot-block-editor/dot-block-editor.component.html
@@ -1,8 +1,8 @@
 @if (editor) {
     <div
         [ngClass]="{
-            'editor-wrapper--fullscreen': isFullscreen === 'true',
-            'editor-wrapper--default': isFullscreen !== 'true'
+            'editor-wrapper--fullscreen': isFullscreen === true,
+            'editor-wrapper--default': isFullscreen !== true
         }"
         [style]="customStyles"
         class="editor-wrapper">
