chore(editor-content):  rollback changes in accordion

--- a/core-web/libs/ui/src/lib/components/dot-ai-image-prompt/components/ai-image-prompt-form/ai-image-prompt-form.component.html
+++ b/core-web/libs/ui/src/lib/components/dot-ai-image-prompt/components/ai-image-prompt-form/ai-image-prompt-form.component.html
@@ -1,8 +1,7 @@
 <form (ngSubmit)="generate.emit()" [formGroup]="form">
-    <p>{{ activeIndex() }}</p>
     <p-accordion
         [multiple]="false"
-        [activeIndex]="activeIndex()"
+        [activeIndex]="0"
         collapseIcon="pi pi-angle-up"
         expandIcon="pi pi-angle-down">
         <p-accordionTab
