--- a/core-web/libs/edit-content/src/lib/fields/dot-edit-content-category-field/dot-edit-content-category-field.component.html
+++ b/core-web/libs/edit-content/src/lib/fields/dot-edit-content-category-field/dot-edit-content-category-field.component.html
@@ -14,3 +14,4 @@
         pButton></button>
 </div>
 <ng-container data-testId="sidebar-placeholder" dotDynamic></ng-container>
+<pre>{{ store.selected() | json }}</pre>
