--- a/core-web/libs/edit-content/src/lib/fields/dot-edit-content-binary-field/dot-edit-content-binary-field.component.html
+++ b/core-web/libs/edit-content/src/lib/fields/dot-edit-content-binary-field/dot-edit-content-binary-field.component.html
@@ -1,4 +1,5 @@
 @if (vm$ | async; as vm) {
+    <dot-ai-image-prompt />
     <div
         [ngClass]="{
             'binary-field__container--uploading': vm.status === BinaryFieldStatus.UPLOADING,
@@ -42,7 +43,7 @@
                             [label]="'dot.binary.field.action.import.from.url' | dm"
                             data-testId="action-url-btn"
                             icon="pi pi-link"
-                            styleClass="p-button-link p-button-secondary p-button-sm" />
+                            styleClass="p-button-link p-button-sm" />
                     }
                     @if (systemOptions().allowCodeWrite) {
                         <p-button
@@ -50,7 +51,7 @@
                             [label]="'dot.binary.field.action.create.new.file' | dm"
                             data-testId="action-editor-btn"
                             icon="pi pi-code"
-                            styleClass="p-button-link p-button-secondary p-button-sm" />
+                            styleClass="p-button-link p-button-sm" />
                     }
                     @if (systemOptions().allowGenerateImg) {
                         <p-button
@@ -60,7 +61,7 @@
                             (click)="openDialog(BinaryFieldMode.AI)"
                             [label]="'dot.binary.field.action.generate.with.dotai' | dm"
                             data-testId="action-ai-btn"
-                            styleClass="p-button-link p-button-secondary p-button-sm pointer-events-auto">
+                            styleClass="p-button-link p-button-sm pointer-events-auto">
                             <svg
                                 fill="none"
                                 height="22"
@@ -126,6 +127,5 @@
                 }
             }
         </p-dialog>
-        <dot-ai-image-prompt />
     </div>
 }
