feat(UVE): show copy content modal

--- a/core-web/libs/sdk/angular/src/lib/components/editable-text/editable-text.component.html
+++ b/core-web/libs/sdk/angular/src/lib/components/editable-text/editable-text.component.html
@@ -1,6 +1,10 @@
 @if (isInsideEditor) {
-<editor [init]="init" [inline]="true" [initialValue]="content" (onFocusOut)="onFocusOut($event)">
-</editor>
+<editor
+    [init]="init"
+    [inline]="true"
+    [initialValue]="content"
+    (onMouseDown)="onMouseDown($event)"
+    (onFocusOut)="onFocusOut($event)" />
 } @else { @if(format === 'html') {
 <div [innerHTML]="safeContent"></div>
 } @else {
