--- a/core-web/libs/edit-content/src/lib/fields/dot-edit-content-category-field/components/dot-category-field-search-list/dot-category-field-search-list.component.html
+++ b/core-web/libs/edit-content/src/lib/fields/dot-edit-content-category-field/components/dot-category-field-search-list/dot-category-field-search-list.component.html
@@ -1,9 +1,9 @@
 <div #tableContainer class="category-field__search-list">
     @if (!isLoading()) {
     <p-table
-        [scrollHeight]="scrollHeight()"
+        [scrollHeight]="$scrollHeight()"
         [scrollable]="true"
-        [value]="searchResults()"
+        [value]="$searchResults()"
         dataKey="key"
         selectionMode="multiple"
         [(selection)]="itemsSelected"
