--- a/core-web/libs/edit-content/src/lib/fields/dot-edit-content-category-field/components/dot-table-skeleton/dot-table-skeleton.component.html
+++ b/core-web/libs/edit-content/src/lib/fields/dot-edit-content-category-field/components/dot-table-skeleton/dot-table-skeleton.component.html
@@ -1,7 +1,7 @@
 <p-table
     [columns]="columns()"
     [tableStyle]="{ 'min-width': '50rem' }"
-    [value]="data()"
+    [value]="$data()"
     styleClass="dotTable">
     <ng-template let-columns pTemplate="header">
         <tr>
