--- a/core-web/libs/edit-content/src/lib/fields/dot-edit-content-category-field/components/dot-category-field-search/dot-category-field-search.component.html
+++ b/core-web/libs/edit-content/src/lib/fields/dot-edit-content-category-field/components/dot-category-field-search/dot-category-field-search.component.html
@@ -1,11 +1,11 @@
 <div class="p-inputgroup w-full">
     <input
-        #searchInput
+        [formControl]="searchControl"
+        [placeholder]="'edit.content.category-field.search.input.placeholder' | dm"
         class="category-field__search-input"
         pInputText
-        placeholder="{{ 'edit.content.category-field.search.input.placeholder' | dm }}"
         type="text" />
-    @if (searchInput.value && !isLoading()) {
+    @if (searchControl.value && !isLoading()) {
     <span (click)="clearInput()" class="p-inputgroup-addon category-field__search-icon-clear">
         <i class="pi pi-times cursor-pointer"></i>
     </span>
