chore(Inline Editing Headless): rename component from  to

--- a/core-web/libs/sdk/angular/src/lib/components/dot-editable-text/dot-editable-text.component.html
+++ b/core-web/libs/sdk/angular/src/lib/components/dot-editable-text/dot-editable-text.component.html
@@ -4,6 +4,7 @@
     [inline]="true"
     [initialValue]="content"
     (onMouseDown)="onMouseDown($event)"
+    (onFocusIn)="onFocusIn($event)"
     (onFocusOut)="onFocusOut($event)" />
 } @else { @if(format === 'html') {
 <div [innerHTML]="safeContent"></div>
