Changed top of autocomplete helper inside add persona form

--- a/core-web/apps/dotcms-ui/src/app/view/components/_common/dot-autocomplete-tags/dot-autocomplete-tags.component.scss
+++ b/core-web/apps/dotcms-ui/src/app/view/components/_common/dot-autocomplete-tags/dot-autocomplete-tags.component.scss
@@ -10,7 +10,7 @@
         font-size: $font-size-sm;
         text-transform: uppercase;
         position: absolute;
-        top: 15px;
+        top: $spacing-4;
         right: $spacing-1;
         color: $color-palette-gray-700;
         display: flex;
