#28724 replace px for vars/rem

--- a/core-web/apps/dotcms-ui/src/app/portlets/dot-edit-page/content/components/dot-edit-page-state-controller/dot-edit-page-state-controller.component.scss
+++ b/core-web/apps/dotcms-ui/src/app/portlets/dot-edit-page/content/components/dot-edit-page-state-controller/dot-edit-page-state-controller.component.scss
@@ -38,7 +38,7 @@ p-inputSwitch {
             @include md-icon;
             color: $color-palette-primary;
             content: "lock_open";
-            font-size: 13px;
+            font-size: $font-size-sm;
             left: 4px;
             position: absolute;
             text-rendering: auto;
