--- a/core-web/libs/dotcms-webcomponents/src/components/dot-asset-drop-zone/dot-asset-drop-zone.scss
+++ b/core-web/libs/dotcms-webcomponents/src/components/dot-asset-drop-zone/dot-asset-drop-zone.scss
@@ -48,7 +48,7 @@ dot-asset-drop-zone {
                 display: block;
                 color: $color-palette-secondary-500;
                 margin-top: -20px;
-                font-size: 20px;
+                font-size: $font-size-lmd;
                 text-align: center;
             }
         }
@@ -58,7 +58,7 @@ dot-asset-drop-zone {
             display: none;
 
             span {
-                font-size: 16px;
+                font-size: $font-size-md;
             }
         }
     }
