--- a/core-web/apps/dotcms-ui/src/app/portlets/dot-edit-page/main/dot-edit-page-nav/dot-edit-page-nav.component.scss
+++ b/core-web/apps/dotcms-ui/src/app/portlets/dot-edit-page/main/dot-edit-page-nav/dot-edit-page-nav.component.scss
@@ -38,7 +38,7 @@ $nav-size: 80px;
     color: $color-palette-gray-800;
     display: flex;
     flex-direction: column;
-    font-size: 11px;
+    font-size: $font-size-xs;
     height: $nav-size;
     justify-content: center;
     text-decoration: none;
