--- a/core-web/libs/dot-rules/src/lib/components/dot-unlicense/dot-unlicense.component.scss
+++ b/core-web/libs/dot-rules/src/lib/components/dot-unlicense/dot-unlicense.component.scss
@@ -24,7 +24,7 @@
     i {
         border: 7px solid;
         border-radius: 10px;
-        font-size: 120px;
+        font-size: 7.5rem;
     }
 
     p {
