--- a/core-web/libs/dotcms-scss/jsp/scss/backend/dot-admin/_dot-admin.scss
+++ b/core-web/libs/dotcms-scss/jsp/scss/backend/dot-admin/_dot-admin.scss
@@ -110,7 +110,7 @@
 }
 .account-flyout h3 {
     margin: 20px 0 0 0;
-    font-size: 12px;
+    font-size: $font-size-xs;
     font-weight: bold;
     padding: 0 15px;
 }
@@ -143,7 +143,7 @@
     border-top: 1px solid #dfdfdf;
 }
 .copyright {
-    font-size: 10px;
+    font-size: $font-size-xs;
     color: #555;
     text-align: center;
 }
@@ -178,7 +178,7 @@
     opacity: 0.7;
     color: #ddd;
     line-height: 14px;
-    font-size: 11px;
+    font-size: $font-size-xs;
     box-shadow: 0px 0px 5px $color-palette-black-op-50;
 
     border-top-left-radius: 8px;
@@ -423,7 +423,7 @@ tr.active {
 .lockedAgo {
     display: block;
     color: #999;
-    font-size: 11px;
+    font-size: $font-size-xs;
     font-style: italic;
     line-height: 14px;
 }
@@ -449,7 +449,7 @@ tr.active {
 .contentHint {
     display: block;
     color: #999;
-    font-size: 11px;
+    font-size: $font-size-xs;
     font-weight: normal;
     line-height: 14px;
     white-space: normal;
@@ -588,7 +588,7 @@ tr.active {
 }
 .suggestHeading {
     padding: 7px 10px;
-    font-size: 12px;
+    font-size: $font-size-xs;
     font-weight: bold;
     color: #555;
     background: url($skin-sprite) repeat-x scroll 0 -325px transparent;
@@ -1410,7 +1410,7 @@ table.dojoxLegendNode td {
     border-spacing: 6px 0px;
 }
 .dojoxColorPickerOptional input {
-    font-size: 11px;
+    font-size: $font-size-xs;
     border: 1px solid #a7a7a7;
     width: 25px;
     padding: 1px 3px 1px 3px;
@@ -1418,7 +1418,7 @@ table.dojoxLegendNode td {
 }
 .dojoxColorPickerHex input {
     width: 55px;
-    font-size: 11px;
+    font-size: $font-size-xs;
 }
 /* Image Picker */
 
