--- a/core-web/libs/dotcms-scss/jsp/scss/dijit/_mixins.scss
+++ b/core-web/libs/dotcms-scss/jsp/scss/dijit/_mixins.scss
@@ -12,7 +12,7 @@
 }
 
 @mixin mouse {
-    font-size: 11px; // TODO: set a variable
+    font-size: $font-size-xs; // TODO: set a variable
     color: $color-palette-gray-500;
 }
 
